test/certmanager/cert-fortio.yaml
apiVersion: cert-manager.io/v1alpha2
kind: Certificate
metadata:
  name: fortio
  namespace: istio-system
spec:
  secretName: fortio
  issuerRef:
    name: istio-issuer
    kind: Issuer
  commonName: fortio.asm.istio.webinf.info
  dnsNames:
    - fortio.asm.istio.webinf.info
