test/certmanager/cert-istiod.yaml
apiVersion: cert-manager.io/v1alpha2
kind: Certificate
metadata:
  name: istiod 
  namespace: istio-system
spec:
  secretName: istiod
  issuerRef:
    name: istio-issuer
    kind: Issuer
  commonName: istiod.istio-system.svc
  dnsNames:
    - istiod.istio-system.svc
