test/certmanager/kustomization.yaml
# Allow install of istiod using kubectl -k
# The deployment is not generated with helm template, and is self contained.
# "cluster" resources must be applied first.
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - crd.yaml
  - cert-manager-no-webhook.yaml

patchesStrategicMerge:
  - patch.yaml
