test/certmanager/patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    istio-injection: disabled
